# ising-ood-inference

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: control_nc33.yaml  eval_temperature_shift.yaml  eval_topology_ood.yaml  main_nc25.yaml  quickstart.yaml
data/: README.md
docs/: architecture.md  reproducing_paper_figures.md
src/ising_ood/: __init__.py  cli.py  config.py
src/ising_ood/data/: __init__.py  dataset.py  discovery.py
src/ising_ood/dynamics/: __init__.py  glauber.py  topology.py
src/ising_ood/evaluation/: __init__.py  id_ood_topology.py  link_diagnostics.py  temperature_shift.py
src/ising_ood/models/: __init__.py  cnn.py  factory.py  gnn.py  hybrid.py  transformer.py
src/ising_ood/training/: __init__.py  engine.py  staged.py
tests/: test_dataset_discovery.py  test_dynamics.py  test_end_to_end_quickstart.py  test_models_forward_shapes.py  test_tensor_roundtrip.py
tools/: generate_topology_xml.py  generate_trajectory_dataset.py
