[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ising-ood"
version = "0.1.0"
description = "Out-of-distribution neural inference of interaction topology in the kinetic Ising model (Glauber dynamics). Reference code for arXiv:2607.03039."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Yuan-Bin Zhu" },
    { name = "Shuang Qiao" },
    { name = "Shi-Ju Ran" },
]
requires-python = ">=3.9"
dependencies = [
    "torch>=1.13",
    "numpy>=1.22",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "scipy>=1.9",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
ising-ood = "ising_ood.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py39"